--- a/index.html
+++ b/index.html
@@ -81,29 +81,21 @@
 
 
 
-  
+<div style="overflow:auto">
+  <p class="opisd2">Stworzyłyśmy biuro na miarę dzisiejszych problemów rachunkowo – podatkowych.
+    Manual Business czyli biznes od podstaw , nie przez przypadek taką nazwę nosi nasze biuro.
+    Wiedza księgowo – podatkowa jest już niezbędna każdej osobie która myśli o założeniu
+    własnej działalności gospodarczej.
+    Z nami będzie łatwiej! Gwarantujemy !
+    Co możemy o sobie powiedzieć, aby przekonać Państwa do wyboru właśnie nas ?
+    Krótko o nas
+    Nasze drogi połączyły się w pracy, przez kilka lat pracowałyśmy na etacie prowadząc dział
+    księgowości, kadr i płac. Uważamy, że to nasz ogromny atut ponieważ my wiemy czego
+    oczekuje klient jak chodzi o indywidualne podejście do jego firmy. To jest nasza bardzo
+    mocna strona, którą właśnie mamy zamiar wykorzystać.</p>
+</div>
 
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-sm-4">
-        <h3>Doradztwo podatkowo-prawne</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      </div>
-      <div class="col-sm-4">
-        <h3>Pomoc w rozpoczęciu działalności gospodarczej</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      </div>
-    
-      
-      <div class="col-sm-4">
-        <h3>Optymalizacja podatkowa</h3>        
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-      </div>
-    </div>
-  </div>
+  
 
   
 
